--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alarm": "^2.0.0",
-    "discord.js": "^12.5.1"
+    "alarm": "2.0.0",
+    "discord.js": "12.5.1"
   }
 }
