--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "alarm": "2.0.0",
-    "discord.js": "12.5.1"
+    "discord.js": "12.5.1",
+    "mongoose": "^5.12.3"
   }
 }
